--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "self-vue3",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "guide-self-vue3.cjs.js",
+  "module": "guide-self-vue3.esm.js",
+  "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rollup -c rollup.config.js"
   },
   "keywords": [],
   "author": "",
@@ -13,9 +16,11 @@
     "@babel/core": "^7.19.6",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-typescript": "^7.18.6",
+    "@rollup/plugin-typescript": "^9.0.2",
     "@types/jest": "^29.2.0",
     "babel-jest": "^29.2.1",
     "jest": "^29.2.1",
+    "tslib": "^2.4.0",
     "typescript": "^4.8.4"
   }
 }
